# SK_GS

./: .gitignore  enviroment.yaml  gui.py  nerf.py  readme.md  requirements.txt  requirements_git.txt  test.py  train.py
data_loader/: __init__.py  batch_collator.py  batch_samplers.py  build.py  canonical_batch_sampler.py  ti_batch_sampler.py
datasets/: DNerfDataset.py  WIM.py  ZJU_MoCAP.py  __init__.py  base.py  build.py  colmap_dataset.py  concat_dataset.py  dataset_base.py
exps/: d_nerf.yaml  d_nerf_400.yaml  d_nerf_sc_gs.yaml  d_nerf_sp_gs.yaml  default.yaml  wim.yaml  wim_512.yaml  zju.yaml
exps/ablation/: arap_0.yaml  control_both.yaml  default.yaml  no_sp_split.yaml  smooth_0.yaml  sparse_0.yaml
exps/loss_cmp_p/: 0.0.yaml  0.01.yaml  0.033.yaml  0.1.yaml  0.33.yaml  1.0.yaml  3.3.yaml  _base.yaml
exps/loss_cmp_t/: 0.0.yaml  0.01.yaml  0.033.yaml  0.1.yaml  0.33.yaml  1.0.yaml  3.3.yaml  _base.yaml
exps/loss_joint/: 0.0.yaml  0.01.yaml  0.033.yaml  0.1.yaml  0.33.yaml  1.0.yaml  3.3.yaml
exps/loss_re_pos/: 0.0.yaml  0.001.yaml  0.01.yaml  0.033.yaml  0.1.yaml  0.33.yaml  3.3.yaml  _base.yaml
exps/loss_smooth/: 0.0.yaml  0.01.yaml  0.03.yaml  0.1.yaml  0.3.yaml  1.0.yaml  _base.yaml
exps/loss_sp_arap/: 0.0.yaml  0.001.yaml  0.01.yaml  0.033.yaml  0.1.yaml  0.33.yaml  1.0.yaml  3.3.yaml  _base.yaml
exps/loss_sparse/: 0.0.yaml  0.01.yaml  0.03.yaml  0.1.yaml  1.0.yaml  _base.yaml
exps/lr_deform/: 0.01.yaml  0.03.yaml  0.1.yaml  0.5.yaml  1.0.yaml  _base.yaml
exps/num_knn/: 1.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  _base.yaml
exps/num_sp/: 1024.yaml  128.yaml  256.yaml  384.yaml  512.yaml  640.yaml  768.yaml  896.yaml  _base.yaml
exps/sk_knn_num/: 3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  _base.yaml
exps/sp_control/: 100.yaml  1000.yaml  200.yaml  2000.yaml  400.yaml  800.yaml  _base.yaml  no_control.yaml
exps/warp/: RBF_LBS.yaml  RBF_LBS2.yaml  RBF_LBSc.yaml  RBF_LBSc2.yaml  RBFw_LBS.yaml  RBFw_LBS2.yaml  RBFw_LBSc.yaml  RBFw_LBSc2.yaml  W_LBS.yaml  W_LBS2.yaml  W_largest.yaml  W_largest2.yaml  _base.yaml
my_ext/: __init__.py  base_network.py  checkpoint.py  config.py  distributed.py  framework.py  lr_scheduler.py  magnitude_debug.py  meter.py  my_logger.py  trainer.py
my_ext/_C/: .clang-format  CMakeLists.txt  __init__.py  __init__.pyi  setup.py
my_ext/_C/include/: algo.h  common.hpp  gaussian_render.h  glm_helper.hpp  lie.h  ops_3d.h  ops_3d_types.h  render.h  sort.cuh  util.cuh
my_ext/_C/src/: pybind11.cpp
my_ext/_C/src/nerf/: freqencoder.cu  gaussian_preprocess.cu  gaussian_preprocess_colmap.cu  gaussian_rasterizer_backwrad.cu  gaussian_rasterizer_extra.cu  gaussian_rasterizer_forward.cu  gaussian_rasterizer_imp.cu  gaussian_render.cu  gaussian_topk.cu  gridencoder.cu  importance_sample.cu  occupancy_grid_sample.cu  op_previous.cu  scene_bound.cu  shencoder.cu  sp_gs_joint.cu  volume_rendering.cu
my_ext/_C/src/ops_3d/: SO3.cu  clip_space.cu  lie_cpu.cpp  lie_gpu.cu  lie_torch.cpp  quaternion.cu  safe_normalize.cu  transform.cu
my_ext/_C/src/other/: SPNet.cu  binvox_rw.cpp  boruka_super_pixel.cpp  cdist_top.cu  cdist_top_match_label.cu  furthest_point_sampling.cu  iterative_normalization.cpp  knn.cu  mask_ops.cu  my_knn.cu  superLiDAR.cu  tree_seg.cu
my_ext/blocks/: __init__.py  mlp.py
my_ext/data_loader/: __init__.py  batch_collator.py  build.py
my_ext/data_transform/: base.py
my_ext/datasets/: __init__.py  build.py  dataset_base.py
my_ext/metrics/: __init__.py  base.py  build.py  image_metric.py  loss_metric.py
my_ext/metrics/lpipsPyTorch/: __init__.py
my_ext/ops/: __init__.py  amp_autocast.py  cdist_top.py  edge_detection_canny.py  fuse_conv_bn.py  knn.py  model_average.py  point_sample.py
my_ext/ops_3d/: SH.py  __init__.py  _lie_check.py  _lietorch_grachcheck.py  _lietorch_tests.py  affine.py  bsdf.py  camera.py  camera_estimate.py  coord_trans.py  coord_trans_common.py  coord_trans_opencv.py  coord_trans_opengl.py  dual_quaternion.py  lie.py  lietorch.py  marching_tets.py  misc.py  normal.py  quaternion.py  rays.py  readme.md  rigid.py  rotation.py  rotation_np.py  shading.py  spherical_harmonics.py  xfm.py
my_ext/ops_3d/light/: __init__.py  base.py  directional_light.py  image_based_light.py  point_light.py
my_ext/optimizer/: Adan.py  RAdam.py  SAM.py  __init__.py  build.py  lars.py  ranger.py
my_ext/structures/: __init__.py  base_2D.py  base_3D.py  bounding_box.py  bounding_box_3d.py  camera.py  image.py  key_points.py  mask.py  material_texture.py  mesh.py  point_clouds.py  restoration.py  segmentation.py  tensor_sequence.py  voxel.py
my_ext/utils/: GAN_utils.py  __init__.py  centernet_utils.py  config_utils.py  data_parallel.py  geometry.py  hook.py  image.py  lazy_import.py  memory.py  open3d_utils.py  path.py  progress.py  registry.py  registry.pyi  str_utils.py  test_utils.py  time_estimator.py  timm_utils.py  torch_utils.py  utils.py
my_ext/utils/gui/: __init__.py  image_viewer.py  viewer_3D.py
my_ext/utils/io/: __init__.py  colmap.py  image.py  material.py  mesh.py  point_clouds.py  video.py  voxel.py
networks/: GS_utils.py  __init__.py  base.py  build.py  gaussian_splatting.py  sk_gs.py  sp_skeleton.py
networks/encoders/: __init__.py  base.py  freq_encoder.py  sphere_harmonics.py
networks/losses/: SC_GS_arap_loss.py  __init__.py  build.py  image_loss.py  ssim.py
networks/renderer/: __init__.py  gaussian_render.py  gaussian_render_origin.py
networks/utils/: GS_utils.py  __init__.py
scripts/: compare_results.py  j_dnerf.sh  j_wim.sh  j_zju.sh  run_ablation_study.sh  run_all_dnerf.sh  run_all_wim.sh  run_all_zju.sh  show_results.py
(+11 files in other folders)
